--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Snake</title>
     <style>
         body {
             margin: 0px;
@@ -23,6 +23,7 @@
 
 <body>
     <h1>Snake</h1>
+    <p> use your arrow keys, and avoid losing!</p>
     <canvas id="game" width="400" height="400"></canvas>
     <script src="script.js"></script>
 </body>
